Note content overlapping issue resolve

--- a/src/header.css
+++ b/src/header.css
@@ -39,4 +39,7 @@ footer {
   height: 2.5rem;
   font-family: "Host Grotesk", sans-serif;
   opacity: 0.3;
+  font-size: 1.0rem;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
