--- a/src/note.css
+++ b/src/note.css
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
+  word-wrap: break-word;
 }
 
 .noteComponent p {
@@ -41,6 +43,12 @@
 .noteComponent:hover {
   transform: translateY(-5px);
   box-shadow: 0 12px 28px rgba(0, 0, 0, 0.2);
+}
+
+.noteComponent .note-content{
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  white-space: pre-wrap;
 }
 
 .noteComponent .tag {
